# book_management_application

./: .gitignore  README.md  pyproject.toml
notebooks/: analytics.ipynb
src/: repl.py
src/domain/: book.py
src/repositories/: __init__.py  book_repository.py  book_repository_protocol.py
src/services/: __init__.py  book_analytics_service.py  book_generator_service.py  book_service.py
tests/mocks/: mock_book_repository.py
tests/services/: test_book_service.py  test_book_service_crud.py  test_book_service_validation.py
